first working version

--- a/Manypulo/Info.plist
+++ b/Manypulo/Info.plist
@@ -17,9 +17,17 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Needed for playing music.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Needed to connect to Manypulo</string>
+	<key>NSHomeKitUsageDescription</key>
+	<string>Needed to control lights.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
